--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="searchbox">
             <form action="">
             <input type="search" id="inputbox" placeholder="Enter City Name" autocomplete="off">
+            <button type="submit" id="btn">Search</button>
             </form>
             <div class="weather-ui"><p class="temp"><br><br></p>
             
